--- a/index.html
+++ b/index.html
@@ -75,7 +75,20 @@
 	</div><!-- End navigation -->
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="sidebar"><!-- Start sidebar content -->
-			<h1 class="sideHeader"><a class="twitter-timeline" data-width="300" data-height="1500" href="https://twitter.com/Schmitz_Lab?ref_src=twsrc%5Etfw">Tweets by Schmitz_Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></h1><!-- Sidebar header -->
+			<div class="sideHeader" style="font-weight:700; margin-bottom:10px;">Latest on X</div>
+<div>
+  <a class="twitter-timeline"
+     data-width="300"
+     data-height="650"
+     data-chrome="noheader nofooter noborders"
+     href="https://twitter.com/Schmitz_Lab?ref_src=twsrc%5Etfw">
+    Posts by Schmitz_Lab
+  </a>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
+   data-chrome="noheader nofooter noborders"
+   href="https://twitter.com/Schmitz_Lab?ref_src=twsrc%5Etfw">Tweets by Schmitz_Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></h1><!-- Sidebar header -->
 			<!-- sidebar content you enter in the page inspector -->
 			 <!-- sidebar content such as the blog archive links -->
 		</div><!-- End sidebar content -->
