--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
 		<div class="clearer"></div>
 	</div><!-- End navigation -->
 
+	<!-- Hero science image -->
+<div class="hero">
+  <img src="files/hero-epigenome.png"
+       alt="Cis-regulatory and chromatin variation across crop genomes"
+       class="hero-image" />
+</div>
+
+
 	<!-- Sidebar removed cleanly. No stray closing tags left behind. -->
 
 	<div id="contentContainer"><!-- Start main content wrapper -->
