--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<!-- Hero science image -->
 <div class="hero">
   <img src="files/hero-epigenome.png"
-       alt="Cis-regulatory and chromatin variation across crop genomes"
+       alt="Cis-regulatory and epigenomic variation in plants"
        class="hero-image" />
 </div>
 
