--- a/index.html
+++ b/index.html
@@ -81,7 +81,50 @@
 	<div id="contentContainer"><!-- Start main content wrapper -->
 		<div id="content"><!-- Start content -->
 			
-<div id='stacks_out_1' class='stacks_top'><div id='stacks_in_1' class=''><div id='stacks_out_173' class='stacks_out'><div id='stacks_in_173' class='stacks_in text_stack'><h3>Research Overview</h3></div></div><div id='stacks_out_174' class='stacks_out'><div id='stacks_in_174' class='stacks_in text_stack'><span style="font-size:16px; color:#0F0C06;">We study how phenotypic variation is driven by natural and spontaneous genetic and epigenetic variation. The laboratory focuses on a few major research themes.<br /><br /></span><span style="font-size:16px; color:#0F0C06;">1) <strong>Spontaneous epialleles:</strong> We investigate the molecular basis and function of spontaneous epialleles. Systematically identifying epialleles using epigenomic approaches, understanding their heritability, and defining how they interact with genetic variation are essential for a comprehensive understanding of genome evolution and its effects on phenotypic variation.</span><span style="font-size:16px; color:#0F0C06;"><br /><br /></span><span style="font-size:16px; color:#0F0C06;">2) <strong>Evolutionary epigenetic clock:</strong> We are developing a plant evolutionary epigenetic clock to explore how plants respond and migrate in their native environments as climates change.<br /><br /></span><span style="font-size:16px; color:#0F0C06;">3) <strong>Cis-regulatory variation:</strong> We aim to identify cis-regulatory sequences underlying phenotypic variation. We use a combination of molecular genetics, epigenomics, and single-cell genomics to identify and functionally test candidate cis-regulatory regions important for crop improvement and natural phenotypic diversity.&nbsp;<br /></span><span style="font:15px .AppleSystemUIFont; color:#0F0C06;"><br /></span></div></div><div id='stacks_out_191' class='stacks_out'><div id='stacks_in_191' class='stacks_in text_stack'><br /></div></div><div id='stacks_out_175' class='stacks_out'><div id='stacks_in_175' class='stacks_in text_stack'><h3>Epigenetics</h3></div></div><div id='stacks_out_176' class='stacks_out'><div id='stacks_in_176' class='stacks_in text_stack'><span style="font-size:16px; color:#262626;">The term "epigenetic" was originally defined to convey how an organism of a single genotype can develop from undifferentiated cells&mdash;essentially defining a developmental program. This definition requires that gene expression states are heritable through mitotic cell divisions, but there is growing interest in understanding how gene expression states are heritable through meiotic cell divisions. We use epigenetic approaches to profile diverse plant populations collected over generational time to identify epialleles and to understand mechanisms important for stable transmission of these epiallelic states.<br /><br /></span></div></div><div id='stacks_out_187' class='stacks_out'><div id='stacks_in_187' class='stacks_in text_stack'><br /></div></div><div id='stacks_out_177' class='stacks_out'><div id='stacks_in_177' class='stacks_in text_stack'><h3>Epigenomics</h3></div></div><div id='stacks_out_178' class='stacks_out'><div id='stacks_in_178' class='stacks_in text_stack'><span style="font-size:16px; color:#262626;">Epigenomics uses genome-wide assays to characterize biochemical activities associated with specific regions of the genome. These assays include measurement of transcript abundance, DNA methylation, chromatin modification states, and chromatin structure, among many other features. Developing assays to reveal new genome-associated activities is important for predicting how sequence and chromatin state contribute to phenotypic variation.&nbsp;<br /><br /></span></div></div><div id='stacks_out_189' class='stacks_out'><div id='stacks_in_189' class='stacks_in text_stack'><br /></div></div><div id='stacks_out_179' class='stacks_out'><div id='stacks_in_179' class='stacks_in text_stack'><h3>News & Updates<br><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Ziliang Wins 2nd Place Poster Award!</a></h3><span style="font-size:16px; color:#262626;">December 11, 2025</span><h3></h3><span style="font:13px Arial, Verdana, Helvetica, sans-serif; ">Congratulations to Ziliang Luo for earning 2nd place in the postdoc poster competition at the 2025 Plant Center Retreat! <br /></span><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Cullan For The Win!</a></h3><span style="font-size:16px; color:#262626;">September 08, 2025</span><h3></h3><span style="font:13px Arial, Verdana, Helvetica, sans-serif; ">Big shout-out to Cullan Meyer for taking 1st place in the poster competition at the Genetics Department Retreat 2025! Great job showcasing your research, Cullan! Congrats! </span><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Escape Room Fun!</a></h3><span style="font-size:16px; color:#262626;">May 6, 2025</span><h3></h3><span style="font:13px Arial, Verdana, Helvetica, sans-serif; ">The Schmitz Lab took a break from the </span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; ">bench and teamed up for some puzzle-solving fun at our latest outing. <br /><br /></span><img class="imageStyle" alt="IMG_8114" src="files/img_8114.jpg" width="500" height="667" /><span style="font:13px Arial, Verdana, Helvetica, sans-serif; "><br /></span><span style="font:13px Arial, Verdana, Helvetica, sans-serif; "><br /></span><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Alex is a NIH Genetics Training Grant fellow!</a></h3><span style="font-size:16px; color:#262626;">April 17, 2025</span><h3></h3><span style="font:13px Arial, Verdana, Helvetica, sans-serif; ">Congratulations to Alex Tadros for being selected as a 2025-26 NIH Genetics Training Grant fellow! Way to go!</span><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Congratulations, Dr. Yao!</a></h3><span style="font-size:16px; color:#262626;">April 7, 2025</span><h3></h3>Big Congrats to Nan<span style="font:13px Arial, Verdana, Helvetica, sans-serif; "> &mdash; now officially Dr. Yao! We're so proud and can't wait to see what's next for you!</span><br /><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Plant Center Retreat 2024 Awardees! </a></h3><span style="font-size:16px; color:#262626;">November 4, 2024</span><h3></h3>Congratulations to the Plant Center Retreat 2024 poster winners! Ankush placed 1st in the graduate student section and Ziliang placed 1st in the postdoc/staff section. Nice work! <br /><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">Hats off to Cullan for winning the NIH training grant two years in a row! </a></h3><span style="font-size:16px; color:#262626;">April 5, 2023</span><h3></h3>Cullan Meyer has been selected by the NIH Genetics training grant committee as a recipient of a 2023-2024 training fellowship! Bravo! <br /><h3><br><a href="https://schmitzlab.uga.edu/news/news.html" target="_blank">2023 CURO Symposium! </a></h3><span style="font-size:16px; color:#262626;">April 4, 2023<br /></span><br /><img class="imageStyle" alt="poster1" src="files/poster1.jpg" width="500" height="667" /><br /><img class="imageStyle" alt="poster2" src="files/poster2.jpg" width="500" height="667" /><br /><img class="imageStyle" alt="poster3" src="files/poster3.jpg" width="500" height="667" /><br /><h3></h3><br /><span style="font-size:16px; color:#262626;"><br /></span></div></div></div></div>
+<div id='stacks_out_1' class='stacks_top'><div id='stacks_in_1' class=''><div id='stacks_out_173' class='stacks_out'><div id='stacks_in_173' class='stacks_in text_stack'><h3>Research Overview</h3></div></div><div id='stacks_out_174' class='stacks_out'><div i<div class="home-intro">
+  <p class="home-mission">
+    We study how phenotypic variation is driven by natural and spontaneous genetic and epigenetic variation in plants,
+    with a major focus on cis-regulatory elements and chromatin biology.
+  </p>
+
+  <div class="pillars">
+    <div class="pillar">
+      <div class="pillar-title">Spontaneous epialleles</div>
+      <div class="pillar-text">
+        We investigate the molecular basis and function of spontaneous epialleles. Systematically identifying epialleles
+        using epigenomic approaches, understanding their heritability, and defining how they interact with genetic
+        variation are essential for a comprehensive understanding of genome evolution and its effects on phenotypic variation.
+      </div>
+    </div>
+
+    <div class="pillar">
+      <div class="pillar-title">Evolutionary epigenetic clock</div>
+      <div class="pillar-text">
+        We are developing a plant evolutionary epigenetic clock to explore how plants respond and migrate in their native
+        environments as climates change.
+      </div>
+    </div>
+
+    <div class="pillar">
+      <div class="pillar-title">Cis-regulatory variation</div>
+      <div class="pillar-text">
+        We aim to identify cis-regulatory sequences underlying phenotypic variation. We use a combination of molecular genetics,
+        epigenomics, and single-cell genomics to identify and functionally test candidate cis-regulatory regions important for crop
+        improvement and natural phenotypic diversity.
+      </div>
+    </div>
+  </div>
+
+  <div class="crop-line">
+    Focus crops: <strong>maize</strong> and <strong>soybean</strong>; also rice, switchgrass, and wheat.
+  </div>
+
+  <div class="home-cta">
+    <a class="btn" href="research/research.html">Explore research</a>
+    <a class="btn btn--ghost" href="join/join.html">Join the lab</a>
+  </div>
+</div>
+</div>
 
 		</div><!-- End content -->
 		<div class="clearer"></div>
