--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>
 
   <div class="crop-line">
-    Focus crops: <strong>maize</strong> and <strong>soybean</strong>; also rice, switchgrass, and wheat.
+    Focus plants: <strong>maize</strong> and <strong>soybean</strong>; also rice, switchgrass, wheat, Arabidopsis and Eutrema.
   </div>
 
   <div class="home-cta">
