--- a/people/people.html
+++ b/people/people.html
@@ -82,7 +82,7 @@
 	<div id="contentContainer"><!-- Start main content wrapper -->
 		<div id="content"><!-- Start content -->
 			
-<div id='stacks_out_1' class='stacks_top'><div id='stacks_in_1' class=''><div id='stacks_out_6' class='stacks_out'><div id='stacks_in_6' class='stacks_in text_stack'><span id='stacks_in_7'><p style="text-align:center;">Lab Members</p></span></div></div><div id='stacks_out_9' class='stacks_out'><div id='stacks_in_9' class='stacks_in com_yourhead_stack_four_columns_stack'><div class='s3_row'>
+<div id='stacks_out_1' class='stacks_top'><div id='stacks_in_1' class=''><div id='stacks_out_6' class='stacks_out'><div id='stacks_in_6' class='stacks_in text_stack'><span id='stacks_in_7'><h2 style="text-align:center; margin: 10px 0 18px 0;">Lab Members</h2></span></div></div><div id='stacks_out_9' class='stacks_out'><div id='stacks_in_9' class='stacks_in com_yourhead_stack_four_columns_stack'><div class='s3_row'>
 	<div class='s3_column s3_column_4'><div id='stacks_out_482' class='stacks_out'><div id='stacks_in_482' class='stacks_in image_stack'>
 <div class='centered_image' >
     <img class='imageStyle' src='files/stacks-image-176b13d.jpg' alt='Stacks Image 483' />
@@ -216,7 +216,7 @@
 
 </div></div></div>
 	<div class='s3_column s3_column_4 s3_column_right'><div id='stacks_out_367' class='stacks_out'><div id='stacks_in_367' class='stacks_in text_stack'><span id='stacks_in_369'>Xuan Zhang</span></div></div><div id='stacks_out_370' class='stacks_out'><div id='stacks_in_370' class='stacks_in text_stack'><strong><br />Position:</strong><br />Senior Scientist<br /><br /><strong>About Me:</strong><br />Ph.D. Crop Genetics and Breeding, China Agricultural University<br />B.S. Huazhong Agricultural University <br /></div></div></div>
-</div></div></div><div id='stacks_out_18' class='stacks_out'><div id='stacks_in_18' class='stacks_in text_stack'></div></div><div id='stacks_out_19' class='stacks_out'><div id='stacks_in_19' class='stacks_in text_stack'><span id='stacks_in_162'><p style="text-align:center;"><u><br />Undergraduate Researchers<br /></u><br /></p></span></div></div><div id='stacks_out_20' class='stacks_out'><div id='stacks_in_20' class='stacks_in com_yourhead_stack_four_columns_stack'><div class='s3_row'>
+</div></div></div><div id='stacks_out_18' class='stacks_out'><div id='stacks_in_18' class='stacks_in text_stack'></div></div><div id='stacks_out_19' class='stacks_out'><div id='stacks_in_19' class='stacks_in text_stack'><span id='stacks_in_162'><h2 style="text-align:center; margin: 20px 0 18px 0;">Undergraduate Researchers</h2></span></div></div><div id='stacks_out_20' class='stacks_out'><div id='stacks_in_20' class='stacks_in com_yourhead_stack_four_columns_stack'><div class='s3_row'>
 	<div class='s3_column s3_column_4'><div id='stacks_out_309' class='stacks_out'><div id='stacks_in_309' class='stacks_in text_stack'><span id='stacks_in_310'><p style="text-align:center;">Lyndsie Dean</p></span></div></div></div>
 	<div class='s3_column s3_column_4'><div id='stacks_out_407' class='stacks_out'><div id='stacks_in_407' class='stacks_in text_stack'><span id='stacks_in_408'><p style="text-align:center;">Anthony Rizzo</p></span></div></div></div>
 	<div class='s3_column s3_column_4'><div id='stacks_out_411' class='stacks_out'><div id='stacks_in_411' class='stacks_in text_stack'><span id='stacks_in_412'><p style="text-align:center;">Zarah Scott</p></span></div></div></div>
