--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>
 
   <div class="crop-line">
-    Focus plants: <strong>maize</strong> and <strong>soybean</strong>; also rice, switchgrass, wheat, Arabidopsis and Eutrema.
+    Focus plants: <strong>maize</strong> and <strong>soybean</strong>; also rice, switchgrass, wheat, Arabidopsis and Eutrema among many others.
   </div>
 
   <div class="home-cta">
